[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/playerAnimations.png" type="Texture" id=1]
[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Guns/GunHandler.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/CharacterController.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/HealthManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Shaders/flash.shader" type="Shader" id=6]
[ext_resource path="res://SFX/PlayerJump.wav" type="AudioStream" id=7]
[ext_resource path="res://Characters/Player/HealthUI.gd" type="Script" id=8]
[ext_resource path="res://Assets/FullHealth.png" type="Texture" id=9]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/flash_color = Color( 0.960784, 0.929412, 0.729412, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 0, -2 )
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -6 )
texture = ExtResource( 1 )
hframes = 4
vframes = 2
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 2 )

[node name="CharacterController" parent="." instance=ExtResource( 4 )]
moveSpeed = 150.0
jumpHeight = 60.0
timeToPeak = 0.6
timeToFall = 0.4
audio = ExtResource( 7 )

[node name="GunHandler" parent="." instance=ExtResource( 3 )]
selectedGun = 3

[node name="HealthManager" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 3 )
anims/Walk = SubResource( 4 )

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="HealthUI" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="HealthUI"]
margin_left = 5.0
margin_top = 5.0
texture = ExtResource( 9 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="playerDamaged" from="." to="HealthUI/TextureRect" method="UpdateHealth"]
[connection signal="timeout" from="FlashTimer" to="." method="EndFlash"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="InvincibilityEnd"]
